refactor(handlers): remove verbose documentation and simplify code formatting
- Remove detailed JavaDoc comments from CorrelationIdFilter explaining implementation details
- Remove inline comments from CorrelationIdFilter doFilter method for cleaner code
- Simplify JavaDoc in StatsCommandHandler by removing extensive usage documentation
- Remove unused TelegramMessageService dependency from StatsCommandHandler
- Replace deprecated Locale constructor with Locale.of() in StatsCommandHandler
- Add @NonNull annotation to User parameter in StatsCommandHandler.handle()
- Remove unused chatId variable from StatsCommandHandler.handle()
- Reorder variable declarations for better code organization
- Remove unnecessary requiresAuth() method override from StatsCommandHandler
- Update CommandDescriptionsTest to reflect handler changes
- Improve code readability by removing redundant comments and maintaining consistent formatting