@@ -2,6 +2,7 @@ package ru.golubyatnikov.family.calendar.bot.handler.command;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Component;
 import org.telegram.telegrambots.meta.api.objects.Message;
 import ru.golubyatnikov.family.calendar.bot.model.User;
@@ -17,26 +18,8 @@ import static ru.golubyatnikov.family.calendar.bot.util.MarkdownFormatter.*;
 
 /**
  * Обработчик команды /stats для отображения статистики событий.
- * 
- * <p>Этот обработчик показывает статистику событий семьи за текущий месяц.
- * "Всего событий" включает сумму активных и завершенных событий.
- * Удаленные события и черновики исключаются из подсчета.</p>
- * 
- * <p>Отображаемая статистика:</p>
- * <ul>
- *   <li>Общее количество событий (активные + завершенные)</li>
- *   <li>Количество завершенных событий (статус COMPLETED)</li>
- *   <li>Количество активных событий (статус ACTIVE)</li>
- *   <li>Количество семейных событий</li>
- *   <li>Количество персональных событий пользователя</li>
- *   <li>Процент завершения (завершенные / (активные + завершенные))</li>
- * </ul>
- * 
- * <p><b>Требования:</b> 1.1, 1.3 - статистика показывает сумму активных и завершенных событий</p>
- * 
- * @see CommandHandler
- * @see StatisticsService
- * @author Family Calendar Bot Team
+ *
+ * @author Golubyatnikov Aleksey
  * @version 2.1.0
  * @since 2026-01-08
  */
@@ -46,26 +29,19 @@ import static ru.golubyatnikov.family.calendar.bot.util.MarkdownFormatter.*;
 public class StatsCommandHandler implements CommandHandler {
     
     private final StatisticsService statisticsService;
-    private final TelegramMessageService messageService;
     
     private static final DateTimeFormatter MONTH_FORMATTER = 
-        DateTimeFormatter.ofPattern("LLLL yyyy", new Locale("ru"));
+        DateTimeFormatter.ofPattern("LLLL yyyy", Locale.of("ru"));
     
     /**
      * Обрабатывает команду /stats.
-     * 
-     * <p>Получает статистику событий за текущий месяц и отправляет
-     * отформатированный отчет пользователю. "Всего событий" включает сумму
-     * активных и завершенных событий. События со статусами DELETED
-     * и DRAFT исключаются из подсчета.</p>
      * 
      * @param message сообщение от пользователя с командой
      * @param user пользователь, отправивший команду
      * @return сообщение для отправки пользователю
      */
     @Override
-    public String handle(Message message, User user) {
-        Long chatId = message.getChatId();
+    public String handle(Message message, @NonNull User user) {
         log.debug("Обработка команды /stats для пользователя ID={}, семья ID={}", 
                   user.getId(), user.getFamily().getId());
         
@@ -80,8 +56,8 @@ public class StatsCommandHandler implements CommandHandler {
             );
             
             // Формирование сообщения со статистикой
-            StringBuilder messageBuilder = new StringBuilder();
             String monthName = currentMonth.atDay(1).format(MONTH_FORMATTER);
+            StringBuilder messageBuilder = new StringBuilder();
             messageBuilder.append(escape("📊 "))
                           .append(bold("Статистика событий"))
                           .append(escape(" ("))
@@ -102,7 +78,7 @@ public class StatsCommandHandler implements CommandHandler {
             messageBuilder.append(escape("• Активных: "))
                           .append(bold(String.valueOf(stats.getActiveEvents())))
                           .append(escape("\n\n"));
-            
+
             // Статистика по типам
             messageBuilder.append(escape("👨‍👩‍👧‍👦 "))
                           .append(bold("По типам событий:"))
@@ -139,6 +115,7 @@ public class StatsCommandHandler implements CommandHandler {
             String responseMessage = messageBuilder.toString();
             log.debug("Пользователю ID={} будет отправлена статистика: всего={}, завершено={}, активных={}", 
                      user.getId(), stats.getTotalEvents(), stats.getCompletedEvents(), stats.getActiveEvents());
+
             return responseMessage;
             
         } catch (Exception e) {
@@ -146,7 +123,7 @@ public class StatsCommandHandler implements CommandHandler {
             return "❌ Произошла ошибка при получении статистики. Попробуйте позже.";
         }
     }
-    
+
     @Override
     public String getCommand() {
         return "/stats";
@@ -155,10 +132,5 @@ public class StatsCommandHandler implements CommandHandler {
     @Override
     public String getDescription() {
         return "Статистика событий за месяц";
-    }
-    
-    @Override
-    public boolean requiresAuth() {
-        return true;
     }
 }
