@@ -2,6 +2,7 @@ package ru.golubyatnikov.family.calendar.bot.handler.command;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Component;
 import org.telegram.telegrambots.meta.api.objects.Message;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
@@ -11,33 +12,15 @@ import ru.golubyatnikov.family.calendar.bot.service.KeyboardService;
 import ru.golubyatnikov.family.calendar.bot.service.telegram.TelegramMessageService;
 import ru.golubyatnikov.family.calendar.bot.service.trash.TrashService;
 import ru.golubyatnikov.family.calendar.bot.util.BotMessageBuilder;
-
 import java.util.List;
+import java.util.stream.IntStream;
 
 import static ru.golubyatnikov.family.calendar.bot.util.MarkdownFormatter.*;
 
 /**
  * Обработчик команды /trash для управления корзиной удаленных событий.
- * 
- * <p>Этот обработчик позволяет пользователю:</p>
- * <ul>
- *   <li>Просматривать удаленные события (корзина)</li>
- *   <li>Восстанавливать события из корзины</li>
- *   <li>Окончательно удалять события</li>
- * </ul>
- * 
- * <p>События хранятся в корзине 30 дней, после чего автоматически удаляются.</p>
- * 
- * <p>Первое событие в корзине отображается вместе с шапкой в одном сообщении,
- * аналогично команде /my_events. Шапка содержит информацию о количестве событий
- * в корзине и сроке хранения.</p>
- * 
- * <p><b>Требования:</b> 19.4, 4.1, 4.2, 4.3, 4.4, 2.1, 2.2</p>
- * 
- * @see CommandHandler
- * @see TrashService
- * @author Family Calendar Bot Team
- * @version 2.0.0
+ *
+ * @author Golubyatnikov Aleksey
  * @since 2026-01-19
  */
 @Component
@@ -52,28 +35,20 @@ public class TrashCommandHandler implements CommandHandler {
     
     /**
      * Обрабатывает команду /trash.
-     * 
-     * <p>Получает список удаленных событий пользователя и отправляет их
-     * с inline-кнопками для восстановления или окончательного удаления.</p>
-     * 
-     * <p>Первое событие отправляется вместе с шапкой корзины в одном сообщении.
-     * Для первого события устанавливается флаг isTrashHeader=true, для остальных
-     * событий флаг сбрасывается в false.</p>
-     * 
-     * <p>Для всех событий сохраняется messageId для последующего управления.</p>
-     * 
+     *
      * @param message сообщение от пользователя с командой
      * @param user пользователь, отправивший команду
      * @return null, так как сообщения отправляются напрямую
      */
     @Override
-    public String handle(Message message, User user) {
+    public String handle(@NonNull Message message,
+                         @NonNull User user) {
         Long chatId = message.getChatId();
         log.debug("Обработка команды /trash для пользователя ID={}", user.getId());
         
         try {
             List<Event> trashedEvents = trashService.getUserTrash(user.getId());
-            
+
             if (trashedEvents.isEmpty()) {
                 String responseMessage = buildEmptyTrashMessage();
                 log.debug("Пользователю ID={} будет отправлено сообщение о пустой корзине", user.getId());
@@ -81,7 +56,7 @@ public class TrashCommandHandler implements CommandHandler {
             }
             
             // Управление флагами isTrashHeader
-            Event firstEvent = trashedEvents.get(0);
+            Event firstEvent = trashedEvents.getFirst();
             if (!Boolean.TRUE.equals(firstEvent.getIsTrashHeader())) {
                 firstEvent.setIsTrashHeader(true);
                 trashService.saveEvent(firstEvent);
@@ -89,14 +64,14 @@ public class TrashCommandHandler implements CommandHandler {
             }
             
             // Сбрасываем флаг для остальных событий
-            for (int i = 1; i < trashedEvents.size(); i++) {
-                Event event = trashedEvents.get(i);
-                if (Boolean.TRUE.equals(event.getIsTrashHeader())) {
-                    event.setIsTrashHeader(false);
-                    trashService.saveEvent(event);
-                    log.debug("Сброшен флаг isTrashHeader для события ID={}", event.getId());
-                }
-            }
+            IntStream.range(1, trashedEvents.size())
+                    .mapToObj(trashedEvents::get)
+                    .filter(event -> Boolean.TRUE.equals(event.getIsTrashHeader()))
+                    .forEach(event -> {
+                        event.setIsTrashHeader(false);
+                        trashService.saveEvent(event);
+                        log.debug("Сброшен флаг isTrashHeader для события ID={}", event.getId());
+            });
             
             // Формируем шапку
             String header = botMessageBuilder.buildTrashHeader(trashedEvents.size());
@@ -126,7 +101,6 @@ public class TrashCommandHandler implements CommandHandler {
             }
             
             log.debug("Пользователю ID={} отправлено {} удаленных событий", user.getId(), trashedEvents.size());
-            // Возвращаем null, так как сообщения уже отправлены
             return null;
             
         } catch (Exception e) {
@@ -138,23 +112,12 @@ public class TrashCommandHandler implements CommandHandler {
     /**
      * Формирует сообщение о пустой корзине.
      * 
-     * <p>Сообщение содержит:</p>
-     * <ul>
-     *   <li>Эмодзи 🗑️ и заголовок "Корзина" (выделено жирным)</li>
-     *   <li>Текст "Корзина пуста."</li>
-     *   <li>Информацию о сроке хранения событий (italic текст)</li>
-     * </ul>
-     * 
-     * <p>Все специальные символы MarkdownV2 корректно экранированы.</p>
-     * 
      * @return отформатированное сообщение о пустой корзине
      */
-    private String buildEmptyTrashMessage() {
-        StringBuilder message = new StringBuilder();
-        message.append("🗑️ ").append(bold("Корзина")).append("\n\n");
-        message.append(escape("Корзина пуста.\n\n"));
-        message.append(italic("Удаленные события хранятся здесь 30 дней, после чего автоматически удаляются навсегда."));
-        return message.toString();
+    private @NonNull String buildEmptyTrashMessage() {
+        return "🗑️ " + bold("Корзина") + "\n\n" +
+                escape("Корзина пуста.") + "\n\n" +
+                italic("Удаленные события хранятся здесь 30 дней, после чего автоматически удаляются навсегда.");
     }
     
     @Override
@@ -165,10 +128,5 @@ public class TrashCommandHandler implements CommandHandler {
     @Override
     public String getDescription() {
         return "Корзина удаленных событий";
-    }
-    
-    @Override
-    public boolean requiresAuth() {
-        return true;
     }
 }
